--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -4,8 +4,7 @@ jobs:
   protobuf-fresh:
     name: Compile protobuf specs to swift code
     timeout-minutes: 30
-    runs-on: buildjet-16vcpu-ubuntu-2004
-    # runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the source code
         uses: actions/checkout@v2
