--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout the source code
         uses: actions/checkout@v2
         with:
-          repository: penumbra-zone/penumbra
+          repository: VPhung24/penumbra
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -38,12 +38,7 @@ jobs:
       - name: swift protos
         shell: bash
         run: |
-          cd penumbra/proto/
+          cd proto/
           mkdir swift_proto
-          protoc --swift_out=swift_proto \
-          --proto_path=./proto --proto_path=./ibc-go-vendor \
-          --swift_opt=FileNaming=PathToUnderscores \ 
-          --swift_opt=Visibility=public -Iproto/ \
-          $(find . -type f \( -name "*.proto" \))
-          cd swift_proto
-          ls
+          ./setupTargets.zsh
+          
