--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -38,7 +38,6 @@ jobs:
       - name: swift protos
         shell: bash
         run: |
-          cd proto/
-          mkdir swift_proto
+          cd penumbra-c-bindings/
           ./setupTargets.zsh
           
