--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -41,4 +41,5 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           ls
-          cd penumbra
+          cd penumbra/penumbra-c-bindings
+          ./setupTargets.zsh
