--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -45,7 +45,7 @@ jobs:
           ls
 
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-          rustup toolchain install nightly
+          rustup toolchain install nightly -y
           cargo build --target-dir target
           for i in "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
           do
