--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -31,27 +31,30 @@ jobs:
       - name: install swift protos dependencies
         uses: ConorMacBride/install-package@v1.1.0
         with: 
-          brew: swift-protobuf grpc-swift openssl
-
-      # N.B. The freshness check can have false negatives, if `prost` output
-      # is superficially but not substantively different. That's OK for now:
-      # we're aiming to keep the defs in sync, and manual maintenance is required.
-      - name: swift protos
+          brew: swift-protobuf grpc-swift
+      - name: install nightly
+        shell: bash
+        run: rustup toolchain install nightly
+      - name: build target directory
         shell: bash
         run: |
-          cd $GITHUB_WORKSPACE
-          ls
-          cd penumbra/penumbra-c-bindings
-          ls
-
-          rustup toolchain install nightly
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           cargo build --target-dir target
+      - name: add ios and sim targets
+        shell: bash
+        run: |
           rustup target add "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
           cargo build --release --target-dir target --target "aarch64-apple-ios" --target "x86_64-apple-darwin" --target "aarch64-apple-darwin" --target "x86_64-apple-ios" --target "aarch64-apple-ios-sim" 
-
+     
+      - name: add macOS Cat targets
+        shell: bash
+        run: |
           rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
           cargo +nightly build --release --target-dir target -Z build-std --target x86_64-apple-ios-macabi --target aarch64-apple-ios-macabi
-
+          
+      - name: create libs
+        shell: bash
+        run: |
           lipo -create \
             target/x86_64-apple-darwin/release/libpenumbra_c_bindings.a \
             target/aarch64-apple-darwin/release/libpenumbra_c_bindings.a \
@@ -64,7 +67,10 @@ jobs:
             target/x86_64-apple-ios-macabi/release/libpenumbra_c_bindings.a \
             target/aarch64-apple-ios-macabi/release/libpenumbra_c_bindings.a \
             -output libpenumbra_c_bindings_maccatalyst.a
-
+     
+      - name: build xcframework
+        shell: bash
+        run: |
           xcodebuild -create-xcframework \
             -library ./libpenumbra_c_bindings_macos.a \
             -headers ./include/ \
@@ -75,7 +81,8 @@ jobs:
             -library ./target/aarch64-apple-ios/release/libpenumbra_c_bindings.a \
             -headers ./include/ \
             -output penumbra_c_bindings.xcframework
-
+      
+      - name: zip
+        shell: bash
+        run: |
           zip -r bundle.zip penumbra_c_bindings.xcframework
-
-          openssl dgst -sha256 bundle.zip
