--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -35,14 +35,15 @@ jobs:
       - name: install nightly
         shell: bash
         run: rustup toolchain install nightly
-      - name: build target directory
-        shell: bash
-        run: |
-          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
-          cargo build --target-dir target
+#       - name: build target directory
+#         shell: bash
+#         run: |
+#           cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
+#           cargo build --target-dir target
       - name: add ios and sim targets
         shell: bash
         run: |
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           rustup target add "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
           cargo build --release --target-dir target --target "aarch64-apple-ios" --target "x86_64-apple-darwin" --target "aarch64-apple-darwin" --target "x86_64-apple-ios" --target "aarch64-apple-ios-sim" 
      
