--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -11,6 +11,16 @@ jobs:
         with:
           repository: VPhung24/penumbra
           path: penumbra
+      - name: cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -35,23 +45,22 @@ jobs:
       - name: install nightly
         shell: bash
         run: rustup toolchain install nightly
-#       - name: build target directory
-#         shell: bash
-#         run: |
-#           cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
-#           cargo build --target-dir target
-      - name: add ios and sim targets
+      - name: original
         shell: bash
         run: |
           cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
-          rustup target add "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
-          cargo build --release --target-dir target --target "aarch64-apple-ios" --target "x86_64-apple-darwin" --target "aarch64-apple-darwin" --target "x86_64-apple-ios" --target "aarch64-apple-ios-sim" 
-     
-      - name: add macOS Cat targets
-        shell: bash
-        run: |
+          for i in "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
+          do
+            echo "adding & building target $i"
+            echo "rustup target add $i"
+            rustup target add $i
+            echo "cargo build --release --target-dir target --target $i"
+            cargo build --release --target-dir target --target $i
+          done
+          
           rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
-          cargo +nightly build --release --target-dir target -Z build-std --target x86_64-apple-ios-macabi --target aarch64-apple-ios-macabi
+          cargo +nightly build --release -Z build-std --target x86_64-apple-ios-macabi --target-dir target
+          cargo +nightly build --release -Z build-std --target aarch64-apple-ios-macabi --target-dir target
           
       - name: create libs
         shell: bash
