--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -44,23 +44,17 @@ jobs:
       - name: install nightly
         shell: bash
         run: rustup toolchain install nightly
-      - name: original
+      - name: ios & sim
         shell: bash
         run: |
-          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
-          for i in "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
-          do
-            echo "adding & building target $i"
-            echo "rustup target add $i"
-            rustup target add $i
-            echo "cargo build --release --target-dir target --target $i"
-            cargo build --release --target-dir target --target $i
-          done
-          
+          rustup target add "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
+          cargo build --release --target-dir target --target "aarch64-apple-ios" --target "x86_64-apple-darwin" --target "aarch64-apple-darwin" --target "x86_64-apple-ios" --target "aarch64-apple-ios-sim"
+
+      - name: macabi
+        shell: bash
+        run: |
           rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
-          cargo +nightly build --release -Z build-std --target x86_64-apple-ios-macabi --target-dir target
-          cargo +nightly build --release -Z build-std --target aarch64-apple-ios-macabi --target-dir target
-          
+          cargo +nightly build --release --target-dir target -Z build-std --target x86_64-apple-ios-macabi --target aarch64-apple-ios-macabi
       - name: create libs
         shell: bash
         run: |
