--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -48,17 +48,20 @@ jobs:
       - name: ios & sim
         shell: bash
         run: |
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           rustup target add "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
           cargo build --release --target-dir target --target "aarch64-apple-ios" --target "x86_64-apple-darwin" --target "aarch64-apple-darwin" --target "x86_64-apple-ios" --target "aarch64-apple-ios-sim"
 
       - name: macabi
         shell: bash
         run: |
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
           cargo +nightly build --release --target-dir target -Z build-std --target x86_64-apple-ios-macabi --target aarch64-apple-ios-macabi
       - name: create libs
         shell: bash
         run: |
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           lipo -create \
             target/x86_64-apple-darwin/release/libpenumbra_c_bindings.a \
             target/aarch64-apple-darwin/release/libpenumbra_c_bindings.a \
@@ -75,6 +78,7 @@ jobs:
       - name: build xcframework
         shell: bash
         run: |
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           xcodebuild -create-xcframework \
             -library ./libpenumbra_c_bindings_macos.a \
             -headers ./include/ \
@@ -89,4 +93,5 @@ jobs:
       - name: zip
         shell: bash
         run: |
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           zip -r bundle.zip penumbra_c_bindings.xcframework
