--- a/.github/workflows/buf-pull-request.yml
+++ b/.github/workflows/buf-pull-request.yml
@@ -13,6 +13,9 @@ jobs:
           path: penumbra
       - name: cache
         uses: actions/cache@v3
+        id: cache-cargo
+        env:
+          cache-name: cache-cargo-modules
         with:
           path: |
             ~/.cargo/bin/
