--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -29,8 +29,38 @@ jobs:
         name: List the state of cargo modules
         continue-on-error: true
         run: cargo --list
-
-      - name: Build
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: false
+      - name: Install protobuf compiler
+        # use base for 'set -eo pipefail'
+        shell: bash
+        run: |
+          curl -sSfL -O https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip
+          unzip protoc-${PROTOC_VERSION}-linux-x86_64.zip -d $HOME/.local
+        env:
+          # N.B. the major version is omitted in the download URLs,
+          # so "21.8" actually means "3.21.8".
+          PROTOC_VERSION: "21.8"
+      - name: install swift protos dependencies
+        uses: ConorMacBride/install-package@v1.1.0
+        with:
+          brew: swift-protobuf grpc-swift
+      - name: install nightly
+        shell: bash
+        run: rustup toolchain install nightly
+      - name: build crate
+        shell: bash
         run: |
           cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           cargo build --target-dir target
+      - name: ios & sim
+        shell: bash
+        run: |
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
+          rustup target add "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
+          cargo build --release --target-dir target --target "aarch64-apple-ios" --target "x86_64-apple-darwin" --target "aarch64-apple-darwin" --target "x86_64-apple-ios" --target "aarch64-apple-ios-sim"
+        
