--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -16,11 +16,8 @@ jobs:
           cache-name: cache-cargo-modules
         with:
           path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
+            ~/.cargo
+            target
             .build
           key: theCache
           restore-keys: theCache
