--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -4,14 +4,14 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-      - name: cache dep for penuumbra
+      - name: Checkout the source code
         uses: actions/checkout@v3
         with:
           repository: VPhung24/penumbra
           path: penumbra
-      - name: Cache cargo
-        id: cache-cargo
+      - name: cache
         uses: actions/cache@v3
+        id: cache-cargo
         env:
           cache-name: cache-cargo-modules
         with:
@@ -19,13 +19,8 @@ jobs:
             ~/.cargo
             target
             .build
-          key: theCache
-          restore-keys: theCache
-
-      - if: ${{ steps.cache-cargo.outputs.cache-hit != 'true' }}
-        name: List the state of cargo modules
-        continue-on-error: true
-        run: cargo --list
+          key: theCache-macos
+          restore-keys: theCache-macos
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -46,18 +41,24 @@ jobs:
         uses: ConorMacBride/install-package@v1.1.0
         with:
           brew: swift-protobuf grpc-swift
-      - name: install nightly
+      - name: build mac cat
         shell: bash
-        run: rustup toolchain install nightly
-      - name: build crate
+        run: | 
+          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
+          rustup toolchain install nightly
+          rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
+          cargo +nightly build --release --target-dir target -Z build-std --target x86_64-apple-ios-macabi --target aarch64-apple-ios-macabi
+      - name: build lib
         shell: bash
         run: |
-          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
-          cargo build --target-dir target
-      - name: ios & sim
-        shell: bash
-        run: |
-          cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
-          rustup target add "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
-          cargo build --release --target-dir target --target "aarch64-apple-ios" --target "x86_64-apple-darwin" --target "aarch64-apple-darwin" --target "x86_64-apple-ios" --target "aarch64-apple-ios-sim"
-        
+            lipo -create \
+            target/x86_64-apple-ios-macabi/release/libpenumbra_c_bindings.a \
+            target/aarch64-apple-ios-macabi/release/libpenumbra_c_bindings.a \
+            -output libpenumbra_c_bindings_maccatalyst.a
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.1
+        with:
+          name: macos
+          path: $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings/libpenumbra_c_bindings_maccatalyst.a
+          
+          
