--- a/.github/workflows/cache-testing.yml
+++ b/.github/workflows/cache-testing.yml
@@ -49,10 +49,20 @@ jobs:
           cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
           rustup target add "aarch64-apple-ios" "x86_64-apple-darwin" "aarch64-apple-darwin" "x86_64-apple-ios" "aarch64-apple-ios-sim"
           cargo build --release --target-dir target --target "aarch64-apple-ios" --target "x86_64-apple-darwin" --target "aarch64-apple-darwin" --target "x86_64-apple-ios" --target "aarch64-apple-ios-sim"
-      - name: macabi
+      - name: create libs
         shell: bash
         run: |
           cd $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings
-          rustup toolchain install nightly
-          rustup component add rust-src --toolchain nightly-aarch64-apple-darwin
-          cargo +nightly build --release --target-dir target -Z build-std --target x86_64-apple-ios-macabi --target aarch64-apple-ios-macabi
+          lipo -create \
+            target/x86_64-apple-darwin/release/libpenumbra_c_bindings.a \
+            target/aarch64-apple-darwin/release/libpenumbra_c_bindings.a \
+            -output libpenumbra_c_bindings_macos.a
+          lipo -create \
+            target/x86_64-apple-ios/release/libpenumbra_c_bindings.a \
+            target/aarch64-apple-ios-sim/release/libpenumbra_c_bindings.a \
+            -output libpenumbra_c_bindings_iossimulator.a
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v3.1.1
+        with:
+          name: macos
+          path: $GITHUB_WORKSPACE/penumbra/penumbra-c-bindings/libpenumbra_c_bindings_maccatalyst.a
