--- a/.github/workflows/cache-testing.yml
+++ b/.github/workflows/cache-testing.yml
@@ -32,9 +32,7 @@ jobs:
       - name: Install protobuf compiler
         # use base for 'set -eo pipefail'
         shell: bash
-        run: |
-          curl -sSfL -O https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip
-          unzip protoc-${PROTOC_VERSION}-linux-x86_64.zip -d $HOME/.local
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
         env:
           # N.B. the major version is omitted in the download URLs,
           # so "21.8" actually means "3.21.8".
