--- a/project.yml
+++ b/project.yml
@@ -11,9 +11,10 @@ packages:
   VivUIExtensions:
     url: https://github.com/VPhung24/VivUIExtensions.git
     from: 1.0.3
-  VivBottomSheet:
-    url: https://github.com/VPhung24/VivUIExtensions.git
-    from: 1.0.3
+  PanModal:
+    url: https://github.com/slackhq/PanModal.git
+    from: 1.2.6
+
 targets:
   ### PenumbraiOS App
   PenumbraiOS:
@@ -71,7 +72,7 @@ targets:
     dependencies:
       - target: PenumbraiOSProtos
       - package: VivUIExtensions
-      - package: VivBottomSheet
+      - package: PanModal
     postCompileScripts:
       - script: /opt/homebrew/bin/swiftlint --fix
         name: Run SwiftLint
